WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208883
REGRESSION (
r257920
): inbox flickers and disappears when scrolling gmail
https://bugs.webkit.org/show_bug.cgi?id=208883
Summary
REGRESSION (r257920): inbox flickers and disappears when scrolling gmail
Simon Fraser (smfr)
Reported
2020-03-10 14:24:46 PDT
REGRESSION (
r257920
): inbox flickers and disappears when scrolling gmail
Attachments
Patch
(1.98 KB, patch)
2020-03-10 14:25 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-03-10 14:25:40 PDT
Created
attachment 393179
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-03-10 14:25:42 PDT
<
rdar://problem/60287447
>
Simon Fraser (smfr)
Comment 3
2020-03-10 14:28:01 PDT
https://trac.webkit.org/changeset/258229/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug