REGRESSION (r257920): inbox flickers and disappears when scrolling gmail https://bugs.webkit.org/show_bug.cgi?id=208883 rdar://problem/60287447

Partially revert r257920 since it caused gmail scrolling flickers.

* rendering/RenderLayerCompositor.cpp:
(WebCore::isScrolledByOverflowScrollLayer):

Canonical link: https://commits.webkit.org/221813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258229 268f45cc-cd09-0410-ab3c-d52691b4dbfc